--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,4 @@
 #Grails Metadata file
-#Thu Aug 05 21:06:47 UYT 2010
-app.grails.version=1.2.2
+#Sat Nov 02 02:08:15 EET 2013
+app.grails.version=2.3.1
 app.name=langSelector
-plugins.hibernate=1.2.2
-plugins.tomcat=1.2.2
